--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -20,6 +20,7 @@ kube = { version = "0.98", default-features = false }
 prost = "0.12"
 public = { path = "crates/public" }
 regex = "1"
+semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 # why tonic 0.10:
 # - tonic >= 0.11 uses tokio-rustls 0.25 that no longer allow disabling certificate verifier
