--- a/agent/crates/trace-utils/Cargo.toml
+++ b/agent/crates/trace-utils/Cargo.toml
@@ -3,6 +3,9 @@ name = "trace-utils"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["rlib", "staticlib"]
+
 [dependencies]
 ahash = "0.8"
 btf-rs = "1.1"
